app/assets/stylesheets/sidebar.tailwind.css
@layer components {
    .sidebar {
        @apply bg-gray-50 dark:bg-gray-900 border-r overflow-auto;

        .space-container {
            @apply my-2 p-2 bg-indigo-700 rounded-md flex justify-between font-semibold text-white;
        }

        .section-header-container {
            @apply flex justify-between items-center text-sm border-b px-1;
        }

        .section-header-title {
            @apply mx-2 py-2 font-bold text-slate-600 uppercase flex flex-grow gap-2 items-center;
        }

        .secondary-button {
            @apply px-3;
        }

        span.secondary-button[disabled="disabled"] {
            @apply disabled-button;
        }

        .section-empty {
            @apply text-slate-400 mx-2 p-2 only:block;
        }

        .section-content-container {
            .section-content-node-container {
                @apply relative w-full ;
            }

            .content-link-container {
                @apply text-slate-800 dark:text-slate-200 hover:bg-gray-100 dark:hover:bg-gray-500 active:bg-gray-200;
            }

            .content-link-container.archived {
                @apply text-slate-400;
            }

            .content-link-container.selected {
                @apply bg-blue-100 dark:bg-blue-800  hover:bg-blue-200  active:bg-blue-300;
            }

            .content-link {
                @apply flex flex-row items-center flex-grow;
            }

            .content-link-buttons-container {
                @apply absolute gap-1 right-1 top-1 p-1 flex;
            }

            .content-link-button {
                @apply rounded-md size-7 group-hover:bg-gray-200 active:bg-gray-300 inline-flex justify-center items-center;
                @apply group-hover:opacity-100 opacity-0 transition-opacity duration-300;

                i {
                    @apply  text-gray-950 opacity-50;
                }
            }

            .content-link-button.selected {
                @apply group-hover:bg-blue-300 active:bg-blue-400;
            }
        }
    }

    .content-sidebar {
        @apply bg-gray-50 dark:bg-gray-900 border-l overflow-auto max-h-screen;
    }
}

